--- a/.github/workflows/main_elch.yml
+++ b/.github/workflows/main_elch.yml
@@ -73,7 +73,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: Production
 
     steps:
       - name: Download artifact from build job
@@ -82,13 +82,10 @@ jobs:
           name: python-app
           path: .
 
-      - name: 'Login to Azure'
+      - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_ECBE5E605A6941BE8A06562C08474F05 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2C53C5A886F9453E97D04E219E1BD041 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_53FC29F15425465EB48F14741F7571A9 }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Ensure startup.sh is executable
         run: chmod +x ./startup.sh
@@ -109,3 +106,4 @@ jobs:
           else
             echo "⚠️ Application health check returned: $response"
             echo "Application URL: https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net"
+          fi
