--- a/.github/workflows/main_elch.yml
+++ b/.github/workflows/main_elch.yml
@@ -4,22 +4,18 @@ on:
   push:
     branches:
       - main
-      - master
-  pull_request:
-    branches:
-      - main
-      - master
   workflow_dispatch:
 
 env:
   AZURE_WEBAPP_NAME: elch
   AZURE_WEBAPP_PACKAGE_PATH: '.'
+  AZURE_RESOURCE_GROUP: elch_group
   PYTHON_VERSION: '3.11'
-  RESOURCE_GROUP: elch_group
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -33,16 +29,28 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Run tests
+        run: |
+          if ls test_*.py 1> /dev/null 2>&1; then
+            python -m pytest test_*.py -v || echo "Tests completed with warnings"
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          path: |
+            .
+            !venv/
+            !env/
+            !.git/
+            !tests/
+            !__pycache__/
+            !*.pyc
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment: Production
+
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
@@ -50,45 +58,39 @@ jobs:
           name: python-app
           path: .
 
-      - name: Azure login
+      - name: Login to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Stop Azure Web App
+      - name: Stop Azure Web App (prevents 409 conflict)
         run: |
-          az webapp stop --name ${{ env.AZURE_WEBAPP_NAME }} --resource-group ${{ env.RESOURCE_GROUP }}
-          echo "Waiting 15s for app to fully stop..."
-          sleep 15
+          az webapp stop --name ${{ env.AZURE_WEBAPP_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }}
+
+      - name: Delete deployment source (removes GitHub Actions lock)
+        run: |
+          az webapp deployment source delete --name ${{ env.AZURE_WEBAPP_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }}
 
       - name: Ensure startup.sh is executable
         run: chmod +x ./startup.sh
 
-      - name: Deploy to Azure Web App with retry
-        run: |
-          max_attempts=5
-          attempt=1
-          while [ $attempt -le $max_attempts ]; do
-            echo "Deployment attempt $attempt..."
-            az webapp deployment source config-zip \
-              --resource-group ${{ env.RESOURCE_GROUP }} \
-              --name ${{ env.AZURE_WEBAPP_NAME }} \
-              --src ./python-app.zip && break
-            echo "Deployment failed, retrying in 10s..."
-            sleep 10
-            attempt=$((attempt+1))
-          done
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
       - name: Start Azure Web App
-        run: az webapp start --name ${{ env.AZURE_WEBAPP_NAME }} --resource-group ${{ env.RESOURCE_GROUP }}
+        run: |
+          az webapp start --name ${{ env.AZURE_WEBAPP_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }}
 
       - name: Verify deployment
         run: |
-          echo "Checking application health..."
+          echo "Deployment completed. Checking application health..."
           sleep 30
           response=$(curl -s -o /dev/null -w "%{http_code}" https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net/healthz || echo "000")
           if [ "$response" = "200" ]; then
-            echo "✅ App is healthy"
+            echo "✅ Application is healthy and responding"
           else
-            echo "⚠️ Health check returned: $response"
-          fi
+            echo "⚠️ Application health check returned: $response"
+            echo "Application URL: https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net"
