--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
 # Core FastAPI and web framework dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-anyio==3.7.1
-sniffio==1.3.0
+fastapi
+uvicorn[standard]
 gunicorn
 click
 # Authentication and security
 authlib
 passlib[bcrypt]
-python-jose[cryptography]>=3.3.0
-cryptography==39.0.1
+python-jose[cryptography]
+cryptography
 bcrypt==3.2.2
 slowapi
 GitPython
 
 # Database
 sqlalchemy
-psycopg[binary]
+psycopg2-binary
 
 # HTTP and networking
 httpx
@@ -41,7 +39,7 @@ openai
 # Local embeddings and ML (for resilience)
 sentence-transformers>=2.2.0
 torch>=1.9.0
-transformers>=4.2.0
+transformers>=4.20.0
 numpy>=1.21.0
 scipy>=1.7.0
 scikit-learn>=1.0.0
@@ -66,6 +64,7 @@ beautifulsoup4
 lxml
 faker
 playwright
+SpeechRecognition
 
 # Enhanced logging and monitoring
 structlog>=22.0.0
@@ -86,8 +85,8 @@ mypy>=0.990
 
 # Additional production dependencies
 webdriver-manager
-fastapi-limiter==0.1.5
-starlette==0.27.0
+fastapi-limiter
+starlette
 aiofiles
 
 # Optional / custom modules (commented out to reduce weight or missing pip packages)
