feat(agent_memory): streamline agent memory structure and enhance logging
- Simplified the agent memory JSON structure for better readability and performance.
- Added logging for database session closure to handle exceptions gracefully.
- Improved the agent loop to identify scrape goals and implement fallback strategies.
- Enhanced error handling in various components to prevent cascading failures.
- Updated configuration settings for better management of environment variables and API keys.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ authlib
 passlib[bcrypt]
 python-jose[cryptography]
 cryptography
-bcrypt==3.2.2
+bcrypt==4.0.1
 slowapi
 GitPython
 
@@ -32,6 +32,7 @@ pydantic-settings
 
 # AI and ML services
 google-generativeai
+google-genai
 google-auth
 google-search-results
 openai
